# pincher

pincher_robot/: CMakeLists.txt  package.xml
pincher_robot/config/: motors_config.yaml
pincher_robot/launch/: display.launch  gazebo.launch  spawn.launch  state_xacro.launch
pincher_robot/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  base_link.STL
pincher_robot/urdf/: links_joints.xacro  robot_parameters.xacro  robotpincher.csv  robotpincher.gazebo  robotpincher.urdf  robotpincher.xacro  transmissions.xacro
